--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "webpack": "4.44.2"
   }
 }
