--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"node index.js",
-    "build" : "npm install"
+    "dev": "node index.js",
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +21,8 @@
     "moment-timezone": "^0.5.33",
     "mongoose": "^6.0.10",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
