--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.33",
     "mongoose": "^6.0.10",
+    "nodemon": "^3.1.4",
     "request": "^2.88.2"
   },
   "devDependencies": {
